corrected general layout and improved
- corrected flex box layout to prevent white space on the lefthand side
- set body overflow to hidden to prevent content sticking out beyond the viewport and making it scroll
- improved dimensions on the body element
- improved display of "latest" items by correcting their containers

--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,7 @@
 body {
   font-family: "poppins", sans-serif;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
-header {
-  font-size: 1.125rem;
-}
-
-.header-container {
+  max-width: 100vw;
+  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -21,19 +11,44 @@ header {
           flex-direction: row;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  width: 100%;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  margin: 0 0;
+  overflow-x: hidden;
+}
+
+header {
+  font-size: 1.125rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.header-container {
+  max-width: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
 }
 
 .searchbar {
-  width: 100%;
   color: #ddd;
 }
 
 .main-nav {
-  width: 100vw;
+  max-width: auto;
   background-color: #333645;
   display: none;
 }
@@ -66,9 +81,13 @@ header {
   display: none;
 }
 
+.container {
+  max-width: 100vw;
+  overflow: hidden;
+}
+
 .banner-img-container {
   height: 80vh;
-  width: 100vw;
   overflow: hidden;
   background-image: url(https://www.netmatters.co.uk/assets/images/thumbnails/full_height_slideshow/home-57sJ.webp);
   background-size: cover;
@@ -90,13 +109,27 @@ header {
 #about {
   background-color: #333645;
   color: white;
+  padding: 50px 15px;
 }
 
 #latest {
-  padding: 15px;
+  padding: 50px 0;
 }
 
 .latest-card {
+  padding: 15px;
+  margin-top: 30px;
+}
+
+.latest-header {
+  width: 100%;
+  height: auto;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.latest-content {
   border-right: 1px solid #333645;
   border-bottom: 1px solid #333645;
   border-left: 1px solid #333645;
@@ -104,16 +137,16 @@ header {
 }
 
 #signup {
-  width: 100%;
   background-color: #ddd;
+  padding: 50px 30px;
 }
 
 #contact {
-  width: 100%;
   background-color: #333645;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   color: white;
+  padding: 47px 43px;
 }
 
 #contact a {
@@ -122,7 +155,6 @@ header {
 }
 
 footer {
-  width: 100%;
   background-color: white;
 }
 
@@ -130,6 +162,7 @@ footer {
   text-decoration: none;
   padding: 1rem 1rem;
   color: #fff;
+  border-radius: 3px;
 }
 
 .btn-marketing {
@@ -171,6 +204,10 @@ footer {
       -ms-flex-positive: 1;
           flex-grow: 1;
   max-width: 40%;
+}
+
+.latest-header-img {
+  max-width: 100%;
 }
 
 i {
