--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -4,6 +4,7 @@
   text-decoration: none;
   padding: 1rem 1rem;
   color: #fff;
+  border-radius: 3px;
 }
 
 .btn-marketing {
