--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -4,3 +4,7 @@
   flex-grow: 1;
   max-width: 40%;
 }
+
+.latest-header-img {
+  max-width: 100%;
+}
